# Corag-backend

./: .env.template  .pdm-python  Dockerfile  README.md  azure-pipeline-build.yml  azure-pipeline-push.yml  pyproject.toml
src/: config.py  main.py
src/api/: routes.py
src/data/: models.py
src/prepare/: embed.py  llm.py  load.py  retrieve.py  split.py  store.py
